# snake-optimization

./: .gitignore  README.md  main.py  pyproject.toml  run_adam_optimization.py  run_genetic_optimization.py  run_llm_optimization.py
adam_as_optimizer/: __init__.py  optimizer.py  run.py
baseline/: run.py
game/: __init__.py  core.py  models.py
genetic/: README.md  __init__.py  learn.py
llm_as_optimizer/: OPTIMIZATION.md  __init__.py  __main__.py  llm_client.py  prompts.py  run.py
player/: __init__.py  features.py  player.py  policy.py  rollout.py
space/: README.md  __init__.py  __main__.py  grid_model.py  interactive.py  landscape.py  mpl_plots.py  plot.py  projection.py  visualizer.py
swarm/: __init__.py  mfa_learn.py
ui/: __init__.py  app.py  genetic_app.py  mfa_app.py  space_app.py  viz.py
zone4x4/: meta.json
